--- a/html/_/supporters.html
+++ b/html/_/supporters.html
@@ -79,7 +79,7 @@ crossorigin=""/>
     <li>FALIU Juliette<i class="profession"><span lang="fr"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en"> (Consultant and Writer at Le Nez Bavard)</span></i></li>
     <li>FIZET-PREVOT Hélène<i class="profession"><span lang="fr"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en"> (Perfumer Freelance at HF PERFUMES)</span></i></li>
     <li>FRACHON Axelle<i class="profession"><span lang="fr"> (Formatrice Parfum)</span><span lang="en"> (Perfume Trainer)</span></i></li>
-    <li style="color: red">LE FLEM Gabriel <i class="profession"><span lang="fr"> (Chargé d'études)</span><span lang="en"> (Study leaders)</span></i></li>
+    <li style="font-weight: bold; color: red">LE FLEM Gabriel <i class="profession"><span lang="fr"> (Chargé d'études)</span><span lang="en"> (Study leaders)</span></i></li>
     <li>LEMONNIER Aymeric <i class="profession"><span lang="fr"> (Apprenti parfumeur chez MAELSTROM Parfumeurs)</span><span lang="en"> (Perfumer intern at MAELSTROM Parfumeurs)</span></i></li>
     <li>MORVAN Axel<i class="profession"><span lang="fr"> (Parfumeur Analyste)</span><span lang="en"> (Analyst Perfumer)</span></i></li>
     <li>NORMAND Sophie<i class="profession"><span lang="fr"> (Rédactrice - Formatrice Parfum)</span><span lang="en"> (Writer - Perfume Trainer)</span></i></li>
