--- a/html/_/nouveautes.html
+++ b/html/_/nouveautes.html
@@ -60,8 +60,8 @@ crossorigin=""/>
         <div class="content">
           <h3 id="heading18"><span lang="fr">10 février 2020</span><span lang="en">10<sup>st</sup> february 2020</span></h3>
           <p>
-            <span lang="fr">Lancement de l'<a href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK">enquête de satisfaction</a> pour recueillir votre avis sur le projet et ainsi, continuer l'amélioration de ScenTree ! </span><span lang="en"><a href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK">satisfaction survey</a></span> 
-
+            <span lang="fr">Lancement de l'<a href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK">enquête de satisfaction</a> pour recueillir votre avis sur le projet et ainsi, continuer l'amélioration de ScenTree ! </span><span lang="en">Launching of a <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK">satisfaction survey</a> to get your opinion about the project, and continue enhancing ScenTree !</span> 
+            
             <br><span lang="fr">Amélioration de la base de donnée</span><span lang="en">DataBase improvement </span>
           </p>
         </div>
