--- a/html/_/index.html
+++ b/html/_/index.html
@@ -117,7 +117,7 @@ crossorigin=""/>
     <br>
     <a class="btn mt-1 mb-5 text-in-color-brown save_map_status_on_leaving" role="button" lang="fr" href="https://docs.google.com/forms/d/e/1FAIpQLSc0Lsx5k5lzFJ3p7YJn04Pn0KbyXCDnl52cTit8hxhf4YYQJA/viewform" target="_BLANK"><b>Enquête de satisfaction  </b><i class="fas fa-info-circle notifi4"></i></a>
 
-    <a class="btn mt-1 mb-5 text-in-color-brown save_map_status_on_leaving" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK"><b>Satisfaction survey  </b><i class="fas fa-info-circle notifi4"></i></a>
+    <a class="btn m-0 mb-3 text-in-color-brown save_map_status_on_leaving" role="button" lang="en" href="https://docs.google.com/forms/d/e/1FAIpQLSeQljdzyC8Lkzqs2k97ZJDeC59lIV_ws2axSNfLa_0-yOezcQ/viewform" target="_BLANK"><b>Satisfaction survey  </b><i class="fas fa-info-circle notifi4"></i></a>
   </div>    
 </div>
 
