--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -9,8 +9,8 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Legal - Mentions Légales</title>
-<title lang="en">ScenTree - Legal - Mentions Légales</title>
+<title lang="fr">ScenTree - Sources</title>
+<title lang="en">ScenTree - Sources</title>
 <!--Description Google-->
 <meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
@@ -174,7 +174,7 @@ crossorigin=""/>
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
-  <h1 class="gros_titre text-in-color-brown">MENTIONS LEGALES</h1>
+  <h1 class="gros_titre text-in-color-brown"><span lang="fr">LES SOURCES DE SCENTREE</span><span lang="en">SCENTREE'S SOURCES & REFERENCES</span></h1>
 </div>
 
 <hr>
