--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -182,8 +182,8 @@ crossorigin=""/>
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
 <p class="mt-3">
-  <span lang="fr">En vertu du règlement (EU-RGPD) 2016/679 du Parlement Européen et du Conseil du 27 avril 2016 relatif à la protection des personnes physiques à l’égard du traitement des données à caractère personnel et à la libre circulation de ces données, et abrogeant la directive 95/46/CE (Règlement Général sur la Protection des Données) et conformément aux dispositions des articles 6-III et 19 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, nous portons à la connaissance des utilisateurs et visiteurs du site internet <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> les informations suivantes.</span>
-  <span lang="en">Pursuant to Regulation (EU-RGPD) 2016/679 of the European Parliament and of the Council of 27<sup>th</sup> of April 2016 on the protection of individuals with regard to the processing of personal data and on the free movement of such data, and repealing Directive 95/46/EC (General Regulation on Data Protection) and in accordance with the provisions of Articles 6-III and 19 of Law No. 2004-575 of 21 June 2004 on confidence in the digital economy, we bring the following information to the attention of users and visitors of the <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> website.</span>
+  <span lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </span>
+  <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </span>
 </p>
 
 
