--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -186,6 +186,25 @@ crossorigin=""/>
   <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </span>
 </p>
 
+<div class="sourcegeneraliste col-12 mt-3" style="background-color: blue;">
+  <b><span lang="fr">Sources Généralistes</span><span lang="en">General Sources</span></b>
+  <br>
+    <uL>
+      <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
+      <li><a href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
+      <li><a href="https://ifrafragrance.org/safe-use/standards-guidance" target ="_BLANK"> https://ifrafragrance.org/safe-use/standards-guidance </a></li>
+      <li><a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target ="_BLANK"><span lang="fr"> Règlement (CE) N<sup>o</sup> 1223/2009 du Parlement européen et du Conseil du 30 novembre 2009 relatif aux produits cosmétiques </span><span lang="en"> Regulation (EC) N<sup>o</sup> 1223/2009 of the european parliament and of the council of 30<sup>th</sup> November 2019 on cosmetic products</span></a></li>
+      <li><a href="https://www.thegoodscentscompany.com" target ="_BLANK"> https://www.thegoodscentscompany.com </a></li>
+      <li><a href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
+      <li><a href="https://www.firmenich.com" target ="_BLANK"> https://www.firmenich.com </a></li>
+      <li><a href="https://www.iff.com" target ="_BLANK"> https://www.iff.com </a></li>
+      <li><a href="https://www.mane.com" target ="_BLANK"> https://www.mane.com </a></li>
+      <li><a href="https://www.fragrantica.com/notes/" target ="_BLANK"> https://www.fragrantica.com/</a></li>
+      <li><a href="https://commons.wikimedia.org/" target ="_BLANK"> https://commons.wikimedia.org/</a></li>
+    </ul>
+</div>
+
+
 
 
 </div>
