--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -223,7 +223,7 @@ crossorigin=""/>
     </ul>
 </div>
 
-<div class="sources col-offset-1 col-5 mt-3" style="background-color: yellow;">
+<div class="sources col-5 mt-3" style="background-color: yellow;">
   <b><span lang="fr">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b>
   <br>
     <uL>
