--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -192,8 +192,6 @@ crossorigin=""/>
     <ul>
       <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
       <li><a href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
-      <li><a href="https://ifrafragrance.org/safe-use/standards-guidance" target ="_BLANK"> https://ifrafragrance.org/safe-use/standards-guidance </a></li>
-      <li><a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target ="_BLANK"><span lang="fr"> Règlement (CE) N<sup>o</sup> 1223/2009 du Parlement européen et du Conseil du 30 novembre 2009 relatif aux produits cosmétiques </span><span lang="en"> Regulation (EC) N<sup>o</sup> 1223/2009 of the european parliament and of the council of 30<sup>th</sup> November 2019 on cosmetic products</span></a></li>
       <li><a href="https://www.thegoodscentscompany.com" target ="_BLANK"> https://www.thegoodscentscompany.com </a></li>
       <li><a href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
       <li><a href="https://www.firmenich.com" target ="_BLANK"> https://www.firmenich.com </a></li>
@@ -241,6 +239,15 @@ crossorigin=""/>
   </div>
 </div>
 
+<div class="sources col-12 mt-3" style="background-color: blue;">
+  <b><span lang="fr">Réglementation</span><span lang="en">Regulatory</span></b>
+  <br>
+    <ul>
+      <li>American Herbal Products Association, Zoë Gardner, Michael Mc Guffin, “Botanical Safety Handbook”, Second Edition, 2013, 1029 pages. ISBN : 978-1-4665-1695-3</li>
+      <li><a href="https://ifrafragrance.org/safe-use/standards-guidance" target ="_BLANK"> https://ifrafragrance.org/safe-use/standards-guidance </a></li>
+      <li><a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target ="_BLANK"><span lang="fr"> Règlement (CE) N<sup>o</sup> 1223/2009 du Parlement européen et du Conseil du 30 novembre 2009 relatif aux produits cosmétiques </span><span lang="en"> Regulation (EC) N<sup>o</sup> 1223/2009 of the european parliament and of the council of 30<sup>th</sup> November 2019 on cosmetic products</span></a></li>
+    </ul>
+</div>
 
 </div>
 
