--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -186,19 +186,19 @@ crossorigin=""/>
   <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </span>
 </p>
 
-<div class="sources col-12 mt-3" style="background-color: blue;">
+<div class="sources col-12 mt-3">
   <b><span lang="fr">Sources Généralistes</span><span lang="en">General Sources</span></b>
   <br>
     <ul>
       <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
-      <li><a href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
-      <li><a href="https://www.thegoodscentscompany.com" target ="_BLANK"> https://www.thegoodscentscompany.com </a></li>
-      <li><a href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
-      <li><a href="https://www.firmenich.com" target ="_BLANK"> https://www.firmenich.com </a></li>
-      <li><a href="https://www.iff.com" target ="_BLANK"> https://www.iff.com </a></li>
-      <li><a href="https://www.mane.com" target ="_BLANK"> https://www.mane.com </a></li>
-      <li><a href="https://www.fragrantica.com/notes/" target ="_BLANK"> https://www.fragrantica.com/</a></li>
-      <li><a href="https://commons.wikimedia.org/" target ="_BLANK"> https://commons.wikimedia.org/</a></li>
+      <li><a class="interpop" href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
+      <li><a class="interpop" href="https://www.thegoodscentscompany.com" target ="_BLANK"> https://www.thegoodscentscompany.com </a></li>
+      <li><a class="interpop" href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
+      <li><a class="interpop" href="https://www.firmenich.com" target ="_BLANK"> https://www.firmenich.com </a></li>
+      <li><a class="interpop" href="https://www.iff.com" target ="_BLANK"> https://www.iff.com </a></li>
+      <li><a class="interpop" href="https://www.mane.com" target ="_BLANK"> https://www.mane.com </a></li>
+      <li><a class="interpop" href="https://www.fragrantica.com/notes/" target ="_BLANK"> https://www.fragrantica.com/</a></li>
+      <li><a class="interpop" href="https://commons.wikimedia.org/" target ="_BLANK"> https://commons.wikimedia.org/</a></li>
     </ul>
 </div>
 
@@ -217,8 +217,8 @@ crossorigin=""/>
         <li>Asja Sarkic, Iris Stappen, Department of Pharmaceutical Chemistry, University of Vienna, “Essential Oils ans Their Single Compounds in Cosmetics”, 2018, 21 pages.</li>
         <li>United Nations Industrial Development Organization, K. Tuley De Silva, “A Manual on The Essential Oil Industry”, 1995, 231 pages, ISBN : 978-9-2110-6437-7</li>
         <li>Dr Robert P. Adams, Baylor University, “Identification Of Essential Oil Components By Gas Chromatography Mass Spectrometry”, Edition 4.1, 2017, 809 pages. ISBN : 978-1-932633-21-4</li>
-        <li><a href="https://www.albertvieille.com" target ="_BLANK"> https://www.albertvieille.com </a></li>
-        <li><a href="http://ultranl.com/market/" target ="_BLANK"> http://ultranl.com/market/</a></li>
+        <li><a class="interpop" href="https://www.albertvieille.com" target ="_BLANK"> https://www.albertvieille.com </a></li>
+        <li><a class="interpop" href="http://ultranl.com/market/" target ="_BLANK"> http://ultranl.com/market/</a></li>
       </ul>
   </div>
 
@@ -234,7 +234,7 @@ crossorigin=""/>
         <li>Sue Clarke, Elseiver Limited, “Essential Chemistry for Aromatherapy”, First Edition 2002, 302 pages. ISBN : 978-0-4431-0403-9</li>
         <li>Charles S. Sell, Wiley Edition, “Chemistry and Sense of Smell”, 2014, 471 pages. ISBN : 978-0-470-55130-1</li>
         <li>Ernst T. Theimer, Academic Press Inc. (London), “Fragrance Chemistry The Science of the Sense of Smell”, United Kingdom Edition, 1982, 631 pages. ISBN : 978-1-2993-6448-6</li>
-        <li><a href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
+        <li><a class="interpop" href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
       </ul>
   </div>
 </div>
@@ -244,8 +244,8 @@ crossorigin=""/>
   <br>
     <ul>
       <li>American Herbal Products Association, Zoë Gardner, Michael Mc Guffin, “Botanical Safety Handbook”, Second Edition, 2013, 1029 pages. ISBN : 978-1-4665-1695-3</li>
-      <li><a href="https://ifrafragrance.org/safe-use/standards-guidance" target ="_BLANK"> https://ifrafragrance.org/safe-use/standards-guidance </a></li>
-      <li><a href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target ="_BLANK"><span lang="fr"> Règlement (CE) N<sup>o</sup> 1223/2009 du Parlement européen et du Conseil du 30 novembre 2009 relatif aux produits cosmétiques </span><span lang="en"> Regulation (EC) N<sup>o</sup> 1223/2009 of the european parliament and of the council of 30<sup>th</sup> November 2019 on cosmetic products</span></a></li>
+      <li><a class="interpop" href="https://ifrafragrance.org/safe-use/standards-guidance" target ="_BLANK"> https://ifrafragrance.org/safe-use/standards-guidance </a></li>
+      <li><a class="interpop" href="https://eur-lex.europa.eu/legal-content/fr/ALL/?uri=CELEX%3A32009R1223" target ="_BLANK"><span lang="fr"> Règlement (CE) N<sup>o</sup> 1223/2009 du Parlement européen et du Conseil du 30 novembre 2009 relatif aux produits cosmétiques </span><span lang="en"> Regulation (EC) N<sup>o</sup> 1223/2009 of the european parliament and of the council of 30<sup>th</sup> November 2019 on cosmetic products</span></a></li>
     </ul>
 </div>
 
