--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -203,7 +203,7 @@ crossorigin=""/>
 </div>
 
 <div class="row">
-  <div class="sources offset-1 col-5 mt-3" style="background-color: grey;">
+  <div class="sources col-6 mt-3" style="background-color: grey;">
     <b><span lang="fr">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b>
     <br>
       <ul>
@@ -222,7 +222,7 @@ crossorigin=""/>
       </ul>
   </div>
 
-  <div class="sources offset-1 col-5 mt-3" style="background-color: yellow;">
+  <div class="sources col-6 mt-3" style="background-color: yellow;">
     <b><span lang="fr">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b>
     <br>
       <ul>
