--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -202,7 +202,7 @@ crossorigin=""/>
     </ul>
 </div>
 
-<div class="col-12">
+<div>
   <div class="sources col-6 mt-3">
     <b><span lang="fr">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b>
     <br>
