--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -202,7 +202,7 @@ crossorigin=""/>
     </ul>
 </div>
 
-<div>
+<div class="row">
   <div class="sources col-5 mt-3">
     <b><span lang="fr">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b>
     <br>
