--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -187,7 +187,7 @@ crossorigin=""/>
 </p>
 
 <div class="sources col-12 mt-3">
-  <b><span lang="fr">Sources Généralistes</span><span lang="en">General Sources</span></b>
+  <b class="text-center mb-1"><span lang="fr">Sources Généralistes</span><span lang="en">General Sources</span></b>
   <br>
     <ul>
       <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
@@ -204,7 +204,7 @@ crossorigin=""/>
 
 <div class="row">
   <div class="sources col-5 mt-3">
-    <b><span lang="fr">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b>
+    <b class="text-center mb-1"><span lang="fr">Sources "Naturels"</span><span lang="en">"Naturals" Sources</span></b>
     <br>
       <ul>
         <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
@@ -223,7 +223,7 @@ crossorigin=""/>
   </div>
 
   <div class="sources offset-2 col-5 mt-3">
-    <b><span lang="fr">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b>
+    <b class="text-center mb-1"><span lang="fr">Sources "Synthétiques"</span><span lang="en">"Synthetics" Sources</span></b>
     <br>
       <ul>
         <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
@@ -240,7 +240,7 @@ crossorigin=""/>
 </div>
 
 <div class="sources col-12 mt-3">
-  <b><span lang="fr">Réglementation</span><span lang="en">Regulatory</span></b>
+  <b class="text-center mb-1"><span lang="fr">Réglementation</span><span lang="en">Regulatory</span></b>
   <br>
     <ul>
       <li>American Herbal Products Association, Zoë Gardner, Michael Mc Guffin, “Botanical Safety Handbook”, Second Edition, 2013, 1029 pages. ISBN : 978-1-4665-1695-3</li>
